--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
   <title>HTML5 Audio Tutorial</title>
+    <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.3.0/build/cssreset/reset-min.css">
     <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -11,8 +12,25 @@
 
 <body>
  
-    <h1>HTML 5 Audio Player</h1>
+   <center> <h1>Podcasts Hipsters.Tech</h1></center>
 
+    <br><br><h1>Telefonia, Asterisk e Voip – Hipsters #79</h1>
+    <audio controls="controls">
+        <source src="Infraestrutura\hipsters_079_asterisk.mp3" type="audio/mp3" />
+             Seu browser não suporta o audio.
+    </audio>
+      <br><br><h1>Gestão com Management 3.0 – Hipsters #80</h1>
+    <audio controls="controls">
+        <source src="Gestao\hipsters_080_business_30.mp3" type="audio/mp3" />
+             Seu browser não suporta o audio.
+    </audio>
+      <br><br><h1>Containers e Docker – Hipsters #75</h1>
+    <audio controls="controls">
+        <source src="Infraestrutura\hipsters_075_docker.mp3" type="audio/mp3" />
+        <source src="track.mp3" type="audio/mpeg" />
+             Seu browser não suporta o audio.
+    </audio>
+      <br><br><h1>Aster Risk</h1>
     <audio controls="controls">
         <source src="Infraestrutura\hipsters_079_asterisk.mp3" type="audio/mp3" />
         <source src="track.mp3" type="audio/mpeg" />
