--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
   <title>HTML5 Audio Tutorial</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.3.0/build/cssreset/reset-min.css">
     <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
@@ -30,16 +31,16 @@
         <source src="track.mp3" type="audio/mpeg" />
              Seu browser não suporta o audio.
     </audio>
-      <br><br><h1>Aster Risk</h1>
+      <br><br><h1>HTTP/2: magia com o novo protocolo – Hipsters #13</h1>
     <audio controls="controls">
-        <source src="Infraestrutura\hipsters_079_asterisk.mp3" type="audio/mp3" />
+        <source src="Infraestrutura\hipsters_013_http2.mp3" type="audio/mp3" />
         <source src="track.mp3" type="audio/mpeg" />
              Seu browser não suporta o audio.
     </audio>
  
     <div class="container gradient">
          
-        <img class="cover" src="images/cover.jpg" alt="">
+        <img class="cover" width="30" src="images/vol-icon.png" alt="">
  
         <div class="player gradient">
  
